crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__predicates__select_where_name_regex.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 6,
        "Title": "Jagged Little Pill"
      }
    ]
  }
]
