crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__predicates__select_where_unrelated_exists.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "title": "As Canções de Eu Tu Eles"
      },
      {
        "title": "Quanta Gente Veio Ver (Live)"
      },
      {
        "title": "Quanta Gente Veio ver--Bônus De Carnaval"
      }
    ]
  }
]
