crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__predicates__select_where_variable_int.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 35,
        "Title": "Garage Inc. (Disc 1)"
      }
    ]
  },
  {
    "rows": [
      {
        "AlbumId": 222,
        "Title": "Serie Sem Limite (Disc 1)"
      }
    ]
  },
  {
    "rows": []
  }
]
